packages/runners/swc-plugin-runners/tests/errors/non-async-function/input.js
export function badRunner(_ctx) {
  "use runner";
  return { name: "test", status: "pass" };
}
